bindings/allow-privilege-escalation-ephemeralcontainers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-ephemeralcontainers-namespace-optout-warn
spec:
  policyName: check-allow-privilege-escalation-ephemeralcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.kolteq.com/warn
        operator: In
        values:
        - restricted
      - key: allow-privilege-escalation-ephemeralcontainers.pss.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-ephemeralcontainers-namespace-optin-warn
spec:
  policyName: check-allow-privilege-escalation-ephemeralcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allow-privilege-escalation-ephemeralcontainers.pss.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-ephemeralcontainers-namespace-optout-audit
spec:
  policyName: check-allow-privilege-escalation-ephemeralcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.kolteq.com/audit
        operator: In
        values:
        - restricted
      - key: allow-privilege-escalation-ephemeralcontainers.pss.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-ephemeralcontainers-namespace-optin-audit
spec:
  policyName: check-allow-privilege-escalation-ephemeralcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allow-privilege-escalation-ephemeralcontainers.pss.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-ephemeralcontainers-namespace-optout-deny
spec:
  policyName: check-allow-privilege-escalation-ephemeralcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.kolteq.com/enforce
        operator: In
        values:
        - restricted
      - key: allow-privilege-escalation-ephemeralcontainers.pss.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-ephemeralcontainers-namespace-optin-deny
spec:
  policyName: check-allow-privilege-escalation-ephemeralcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allow-privilege-escalation-ephemeralcontainers.pss.kolteq.com/enforce
        operator: In
        values:
        - 'true'
